<resources>
    <string name="app_name">MudisEmployee</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_order_now"><![CDATA[Sign In & order now!]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">No account?</string>
    <string name="signup">Sign Up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="have_account">Have account?</string>
    <string name="sign_up_order_now"><![CDATA[Sign up & get your food!]]></string>
    <string name="bad_internet_connection_please_try_again_later">Bad internet connection, please try again later</string>
    <string name="password_length_must_be_more_than_6_characters_and_without_space">Password length must be more than 6 characters and without space</string>
    <string name="email_incorrect">Email Incorrect</string>
    <string name="food_menu">Food Menu</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="exit">Exit Account</string>
    <string name="search">Search</string>
    <string name="price">Price:</string>
    <string name="_0_0">0.0₪</string>
    <string name="to_cart">To Cart</string>
    <string name="pay_now">Pay Now</string>
    <string name="my_cart">My Cart</string>
    <string name="total_price">Total Price:</string>
    <string name="orders">Orders</string>
    <string name="late">Late</string>
    <string name="in_process">In process</string>
    <string name="status">Status: </string>
    <string name="are_you_sure_that_you_have_finished_the_order">Are you sure that you have finished the order</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order">Order №</string>
    <string name="finishing_time">"\nFinishing time "</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="changes">Changes</string>
    <string name="discounts">Discounts</string>
    <string name="history">History</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_dish">Add Dish</string>
    <string name="numbers">0123456789</string>
    <string name="cost">Cost</string>
    <string name="type">Type</string>
    <string name="picture">Picture</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="empty_data">No text detected!</string>
    <string name="update_dish">Update Dish</string>
    <string name="update_banner">Update Banner</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="is_ready">Is Ready</string>
    <string name="dishes">Dishes</string>
    <string name="stop_list">Stop list</string>
    <string name="sales">Sales</string>
    <string name="add_banner">Add Banner</string>
    <string name="date">Date</string>
    <string name="date_digits">0123456789.</string>
    <string name="description">Description</string>
</resources>