<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ChangesFragment"
    android:weightSum="3"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/addLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/true_green">
        <TextView
            android:id="@+id/tvAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="48sp"
            android:text="@string/add"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/updateLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/yellow_true">
        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="48sp"
            android:text="@string/update"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/deleteLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/red">
        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="48sp"
            android:text="@string/delete"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </FrameLayout>




</LinearLayout>